# ksa-real-estate-agent

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
data/migrations/: runner.py
data/mock/: riyadh_listings.json
docs/: architecture.md
evals/: runner.py
evals/datasets/: analyst_eval_dataset.json  cleaning_eval_dataset.json  risk_eval_dataset.json
evals/judges/: faithfulness.py  relevance.py
src/agents/analyst/: agent.py  prompts.py
src/agents/cleaning/: agent.py  normalizer.py  prompts.py
src/agents/risk/: agent.py  prompts.py
src/agents/sourcing/: agent.py  prompts.py
src/api/: main.py  schemas.py
src/api/routes/: analysis.py  listings.py
src/core/: config.py  database.py  exceptions.py  logging_setup.py  state.py
src/dashboard/: app.py
src/graph/: builder.py  checkpointer.py  router.py
src/mcp_servers/postgres_server/: repository.py  schemas.py  server.py
src/mcp_servers/search_server/: server.py
src/tools/: compliance_tools.py  quant_tools.py
src/workers/: celery_app.py  tasks.py
tests/: conftest.py
