[project]
name = "ksa-real-estate-agent"
version = "0.1.0"
description = "Multi-agent Riyadh Real Estate investment analysis system using LangGraph, LiteLLM, and MCP tooling"
authors = [
    { name = "Aaish Faisal Hameedi", email = "hameediaaish@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

# ── Core Runtime Dependencies ───────────────────────────────────
dependencies = [
    # Orchestration & Agents
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.1.0",
    "litellm>=1.40.0",

    # Data Validation & Configuration
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9",

    # API & Async Runtime
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",

    # Task Queue
    "celery[redis]>=5.3.0",
    "flower>=2.0.0",
    "redis>=5.0.0",

    # Quantitative Tools
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",

    # Evaluation
    "ragas>=0.1.0",

    # Dashboard
    "streamlit>=1.35.0",

    # MCP Servers
    "mcp (>=1.0.0)",
    "langchain-community (>=0.3.0,<0.4.0)",
    "langgraph-checkpoint-postgres (>=2.0.0)",
    "fastembed (>=0.2.0)",
    "psycopg[binary] (>=3.0.0)",
]

# ── Dev Dependencies ────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
]

# ── Poetry-Specific Build Config ────────────────────────────────
[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
black = ">=24.0.0"

# ── Ruff Linter Configuration ───────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

# ── Black Formatter Configuration ───────────────────────────────
[tool.black]
line-length = 88
target-version = ["py310"]

# ── MyPy Type Checker Configuration ─────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# ── Pytest Configuration ─────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

